# nixpkgs-stats

./: .gitignore  README.md  devenv.nix  devenv.yaml  mkdocs.yml  pyproject.toml
.github/workflows/: pages.yml
docs/: index.md
scripts/: app.py  generate_site.py
src/nixpkgs_stats/: heatmap.py  histogram.py  scanner.py
