[project]
name = "nixpkgs-stats"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit",
    "plotly",
    "pandas",
    "kaleido>=1.3.0",
]

[tool.pyright]
exclude = [".venv"]
venvPath = "."
venv = ".venv"

# [tool.uv.build-backend]
# module-root = ""

[build-system]
requires = ["uv_build >= 0.8.0, <1.0.0"]
build-backend = "uv_build"
